# the-cody-bills

./: README.md  pyproject.toml
Text_Preprocessing/: table_pennsylvania.json  table_pennsylvania.txt  table_texas.json  table_texas.txt  text_analysis.py
apps_folder/: app.py
apps_folder/assets/: table_texas.txt
cody_bills/: __init__.py  __main__.py  app.py  igit.py  table_example.py
cody_bills/Text_Preprocessing/: table_pennsylvania.json  table_texas.json  text_analysis.py
cody_bills/assets/: cleaned_consumed.txt  cleaned_emissions.txt  cleaned_production.txt  per_capita_energy_consumed.txt  per_capita_energy_expenditure.txt  table_california.txt  table_pennsylvania.json  table_pennsylvania.txt  table_texas.json  table_texas.txt  total_carbon_dioxide.txt  total_energy_production.txt
cody_bills/data_extraction/: bills_Illinois.json  bills_Pennsylvania.json  bills_Texas.json  scraper.py
cody_bills/energy_states/: eia_clean.py  energy_dataviz.py  states_dict.py
cody_bills/energy_states/eia_states_data/cleaned_data/: cleaned_consumed.txt  (+2 more)
cody_bills/utils/: helper_functions.py
energy_states/: eia_clean.py  energy_dataviz.py  states_dict.py
energy_states/eia_states_data/: TotalCarbonDioxideEmissions-StateRankings.csv  TotalEnergyConsumedperCapita-StateRankings.csv  TotalEnergyExpendituresperCapita-StateRankings.csv
energy_states/eia_states_data/cleaned_data/: cleaned_emissions.txt
energy_states/eia_states_data/raw_data/: TotalEnergyProduction-StateRankings.csv
tests/: test_eia_clean.py  test_eia_cleaning.py  test_energy_dataviz.py
