[tool.poetry]
name = "cody_bills"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "cody_bills"}]

[tool.poetry.dependencies]
python = "^3.8"
dash = "^2.8.1"
pandas = "^1.5.3"
dash-bootstrap-components = "^1.3.1"
dash-core-components = "^2.0.0"
matplotlib = "^3.7.0"
wordcloud = "^1.8.2.2"
nltk = "^3.8.1"
pytest = "^7.2.2"
requests = "^2.28.2"
bs4 = "^0.0.1"
pypdf2 = "^3.0.1"
pathlib = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
